--- a/frontend_poli-main/index.html
+++ b/frontend_poli-main/index.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">INICIO</a></li>
-                <li><a href="#">NUESTROS CURSOS</a></li>
-                <li><a href="./views/instructor/instructors.html">INSTRUCTORES</a></li>
-                <li><a href="#">TESTIMONIOS</a></li>
-                <li><a href="#">REGISTRATE</a></li>
-                <li><a href="#">INICIO DE SESIÓN</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./views/courses/cursos.html">Nuestros Cursos</a></li>
+                <li><a href="./views/instructor/instructors.html">Instructores</a></li>
+                <li><a href="#">Testimonios</a></li>
+                <li><a href="#">Registrate</a></li>
+                <li><a href="#">Inicio de sesion</a></li>
             </ul>
         </nav>
     </header>
@@ -28,9 +28,9 @@
                 </div>
             </div>
             <div class="texto">
-                <h1>CENTRO DE BIENESTAR ENSUEÑO</h1>
+                <h1>Centro de bienes Ensueño</h1>
                 <p>Un enfoque diferente de la salud y el bienestar</p>
-                <h2>VAMOS MÁS ALLÁ<br>PARA DARTE<br>UNA EXCELENTE<br>ATENCIÓN</h2>
+                <h2>Vamos mas alla para darte una excelente atencion</h2>
             </div>
         </section>
         <section class="contact">
