--- a/frontend_poli-main/index.html
+++ b/frontend_poli-main/index.html
@@ -12,9 +12,9 @@
         <nav>
             <ul>
                 <li><a href="./index.html">Inicio</a></li>
-                <li><a href="./views/courses/cursos.html">Nuestros Cursos</a></li>
+                <li><a href="./views/courses/cursos.html">Nuestros cursos</a></li>
                 <li><a href="./views/instructor/instructors.html">Instructores</a></li>
-                <li><a href="#">Testimonios</a></li>
+                <li><a href="./views/testimonios/testimonios.html">Testimonios</a></li>
                 <li><a href="#">Registrate</a></li>
                 <li><a href="#">Inicio de sesion</a></li>
             </ul>
@@ -35,9 +35,9 @@
         </section>
         <section class="contact">
             <div class="social-icons">
-                <a href="#"><img src="./img/twitter.png" alt="Twitter"></a>
-                <a href="#"><img src="./img/facebook.png" alt="Facebook"></a>
-                <a href="#"><img src="./img/instagram.png" alt="Instagram"></a>
+                <a href="https://twitter.com"><img src="./img/twitter.png" alt="Twitter"></a>
+                <a href="https://facebook.com"><img src="./img/facebook.png" alt="Facebook"></a>
+                <a href="gttps://Instagram.com"><img src="./img/instagram.png" alt="Instagram"></a>
             </div>
             <p>Comuníquese con nosotros a través de nuestras redes</p>
             <p>Calle de la Armonía #12-34, Barrio El Edén, Medellín, Colombia.</p>
