Modulos registro e inicio de sesion

--- a/frontend_poli-main/index.html
+++ b/frontend_poli-main/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <link rel="icon" href="./img/logo.webp" type="image/webp"> <!-- Favicon agregado -->
     <title>Ensueño</title>
 </head>
 <body>
@@ -15,8 +16,8 @@
                 <li><a href="./views/courses/cursos.html">Nuestros cursos</a></li>
                 <li><a href="./views/instructor/instructors.html">Instructores</a></li>
                 <li><a href="./views/testimonios/testimonios.html">Testimonios</a></li>
-                <li><a href="#">Registrate</a></li>
-                <li><a href="#">Inicio de sesion</a></li>
+                <li><a href="./views/registro/registro.html">Registrate</a></li>
+                <li><a href="./views/iniciosesion/iniciosesion.html">Inicio de sesion</a></li>
             </ul>
         </nav>
     </header>
