--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
+    <link rel="icon" href="./img/logo.webp" type="image/webp"> <!-- Favicon agregado -->
     <title>Ensueño</title>
 </head>
 <body>
@@ -11,12 +12,12 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">INICIO</a></li>
-                <li><a href="#">NUESTROS CURSOS</a></li>
-                <li><a href="./views/instructor/instructors.html">INSTRUCTORES</a></li>
-                <li><a href="#">TESTIMONIOS</a></li>
-                <li><a href="#">REGISTRATE</a></li>
-                <li><a href="#">INICIO DE SESIÓN</a></li>
+                <li><a href="./index.html">Inicio</a></li>
+                <li><a href="./views/courses/cursos.html">Nuestros cursos</a></li>
+                <li><a href="./views/instructor/instructors.html">Instructores</a></li>
+                <li><a href="./views/testimonios/testimonios.html">Testimonios</a></li>
+                <li><a href="./views/registro/registro.html">Registrate</a></li>
+                <li><a href="./views/iniciosesion/iniciosesion.html">Inicio de sesion</a></li>
             </ul>
         </nav>
     </header>
@@ -24,20 +25,20 @@
         <section class="hero">
             <div class="hero-left">
                 <div class="hero-logo">
-                    <img src="logo.png" alt="Logo de Centro de Bienestar Ensueño">
+                    <img src="./img/logo.webp" alt="Logo de Centro de Bienestar Ensueño">
                 </div>
             </div>
             <div class="texto">
-                <h1>CENTRO DE BIENESTAR ENSUEÑO</h1>
+                <h1>Centro de bienes Ensueño</h1>
                 <p>Un enfoque diferente de la salud y el bienestar</p>
-                <h2>VAMOS MÁS ALLÁ<br>PARA DARTE<br>UNA EXCELENTE<br>ATENCIÓN</h2>
+                <h2>Vamos mas alla para darte una excelente atencion</h2>
             </div>
         </section>
         <section class="contact">
             <div class="social-icons">
-                <a href="#"><img src="Logo_twiter.png" alt="Twitter"></a>
-                <a href="#"><img src="Logo_facebook.jpg" alt="Facebook"></a>
-                <a href="#"><img src="Logo_instagram.png" alt="Instagram"></a>
+                <a href="https://twitter.com"><img src="./img/twitter.png" alt="Twitter"></a>
+                <a href="https://facebook.com"><img src="./img/facebook.png" alt="Facebook"></a>
+                <a href="gttps://Instagram.com"><img src="./img/instagram.png" alt="Instagram"></a>
             </div>
             <p>Comuníquese con nosotros a través de nuestras redes</p>
             <p>Calle de la Armonía #12-34, Barrio El Edén, Medellín, Colombia.</p>
